remove RTs on server side, fix message css / wrap

--- a/client/src/components/Message.css
+++ b/client/src/components/Message.css
@@ -14,8 +14,12 @@
     cursor: pointer;
 }
 
-.gray-bubble {
+.gray-message {
     max-width: 75%;
+}
+
+.gray-bubble {
+    /* max-width: 75%; */
     border-radius: 1.1rem;
     display: flex;
     flex-direction: column;
@@ -46,6 +50,7 @@
 }
 
 .blue-message-body {
+    max-width: 75%;
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-end;
@@ -61,7 +66,7 @@
 }
 
 .blue-bubble {
-    max-width: 75%;
+    /* max-width: 75%; */
     border-radius: 1.1rem;
     display: flex;
     flex-direction: column;
@@ -82,6 +87,7 @@
 
 .gray-tweet-text, .blue-tweet-text {
     margin: 0.7rem;
+    overflow-wrap: break-word;
 }
 
 .first-like, .second-like, .third-like {
